--- a/JobShed/App.config
+++ b/JobShed/App.config
@@ -1,15 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-  <appSettings>
-    <add name="requestId" value="142afde2-6228-49f9-8a29-9b6c3a0cbe40" />
-  </appSettings>
-  <connectionStrings>
-    <add name="crm" connectionString="AuthType=ClientSecret;Url=https://org9a0e983b.crm4.dynamics.com;ClientId=47964ae0-8b32-472d-8d4b-2287cc927dba;ClientSecret=ljO8Q~.oPZq_3Bt3WHIstDjMn~FFvPMstTBWwasQ" />
-  </connectionStrings>
-  <configSection>
+  <configSections>
     <section name="log4net" type="log4net.Config.Log4NetonfigurationSectionHandler, log4net" />
-
-  </configSection>
+  </configSections>
+  
+  <connectionStrings>
+    <add name="crm" connectionString="AuthType=ClientSecret;Url=https://orgcb5b1c4f.crm4.dynamics.com;ClientId=70f305ad-532c-4c80-8a40-bdddb784e402;ClientSecret=ljO8Q~.oPZq_3Bt3WHIstDjMn~FFvPMstTBWwasQ" />
+  </connectionStrings>
+ 
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.1" />
     </startup>
@@ -21,11 +19,11 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Text.Json" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-6.0.0.7" newVersion="6.0.0.7" />
+        <bindingRedirect oldVersion="0.0.0.0-6.0.0.2" newVersion="6.0.0.2" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-11.0.0.0" newVersion="11.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-13.0.0.0" newVersion="13.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.IdentityModel.Clients.ActiveDirectory" publicKeyToken="31bf3856ad364e35" culture="neutral" />
